# FitdaysWeb

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Fitdays-Celso.csv  Fitdays-Celso_test2.csv  LICENSE  README.md  RelaxFit_Guaíra_202606160933.csv  TEMP_ISSUE.md  docker-compose.prod.yml  docker-compose.yml
.agents/: AGENTS.md
.agents/rules/: git-commits.md
.github/: release-drafter.yml
.github/workflows/: ci.yml  pr-title-check.yml  release-drafter.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  parser.py  schemas.py
backend/app/routers/: records.py  shared_links.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 35265145097f_rename_username_to_login_and_add_.py  4634ce7e177d_add_fitdays_reports_table.py  b57236d395af_add_shared_links_tables.py
backend/tests/: test_api.py  test_shared_links.py
frontend/: Dockerfile  cypress.config.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/cypress/e2e/: top_toolbar.cy.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: IconButton.tsx  LanguageMenu.tsx  LanguageSelector.tsx  LocalizedDatePicker.tsx  Logo.tsx  Sidebar.tsx  ThemeToggle.tsx  TopToolbar.stories.tsx  TopToolbar.tsx  UserMenu.tsx
frontend/src/lib/: api.ts  i18n.ts
frontend/src/locales/: en.json  es.json  pt.json
frontend/src/views/: Dashboard.tsx  GuestSharedReport.tsx  History.tsx  Import.tsx  Login.tsx  (+3 more)
scripts/: bump_version.py
test-data/: Fitdays-test-data.csv
(+1 files in other folders)
