[project]
name = "fitdaysweb-backend"
version = "0.1.1"
description = "FastAPI backend for FitdaysWeb fitness and body composition tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "xlrd>=2.0.1",
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "pillow>=12.2.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
